Added three new endpoints
