# server/openapi_server/models/__init__.py
@@ -5,7 +5,11 @@ from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.codes_codes_obj import CodesCodesObj
 from openapi_server.models.concept_detail import ConceptDetail
+from openapi_server.models.concept_prefterm import ConceptPrefterm
+from openapi_server.models.concept_sab_rel import ConceptSabRel
+from openapi_server.models.concept_sab_rel_depth import ConceptSabRelDepth
 from openapi_server.models.concept_term import ConceptTerm
+from openapi_server.models.path_item_concept_relationship_sab_prefterm import PathItemConceptRelationshipSabPrefterm
 from openapi_server.models.qqst import QQST
 from openapi_server.models.sab_definition import SabDefinition
 from openapi_server.models.sab_relationship_concept_prefterm import SabRelationshipConceptPrefterm
